--- a/.github/workflows/csv2skos.yml
+++ b/.github/workflows/csv2skos.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           git config --local user.name "GitHub Actions"
           git config --local user.email "actions@github.com"
+          mkdir artifacts
           git add artifacts/${env.RESOURCE}.skos.ttl
           git commit -m "Add generated ${env.RESOURCE}.skos.ttl"
           git push
