--- a/.github/workflows/csv2skos.yml
+++ b/.github/workflows/csv2skos.yml
@@ -15,18 +15,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.6.0
+        with:
+          access_token: ${{ github.token }}
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Convert YARRRML to RML
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install pip dependencies
+        run: pip install -r ./requirements.txt
+
       - name: Convert YARRRML to RML
         uses: vemonet/yarrrml-parser@v1.1
         with:
-          input: rules/mappings.yarrr.yml
+          input: ./rules/mappings.yarrr.yml
           output: mappings.rml.ttl
 
-      # Execute RML Mapper to generate linked data
       - name: Run RML mapper
         uses: vemonet/rmlmapper-java@v4.9.0
         with:
@@ -36,27 +53,16 @@ jobs:
         env:
           JAVA_OPTS: "-Xmx6g"
 
-      # Set up Python and install skosify
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
-
-      - name: Install pip dependencies
-        run: pip install skosify
-
-      # Run skosify
       - name: Run skosify
         run: | 
           skosify linked_data.rdf.ttl -o ${{ env.RESOURCE }}.skos.ttl --label "${{ env.RESOURCE }}"
-          cp ${{ env.RESOURCE }}.skos.ttl artifacts/${{ env.RESOURCE }}.skos.ttl
+          cp ${{ env.RESOURCE }}.skos.ttl ./artifacts/${{ env.RESOURCE }}.skos.ttl
 
-      # Commit and push the generated file
       - name: Commit and push changes
         run: |
           git config --local user.name "GitHub Actions"
           git config --local user.email "actions@github.com"
-          mkdir artifacts
+          mkdir -p ./artifacts
           git add artifacts/${env.RESOURCE}.skos.ttl
           git commit -m "Add generated ${env.RESOURCE}.skos.ttl"
           git push
