--- a/.github/workflows/csv2skos.yml
+++ b/.github/workflows/csv2skos.yml
@@ -38,16 +38,10 @@ jobs:
       - name: Install pip dependencies
         run: pip install -r ./requirements.txt
 
-      - name: List files in the repository
-        run: ls -R
-      
-      - name: Ensure rules directory is accessible
-        run: cp ./rules/mappings.yarrrml.yml ${{ github.action_path }}/.
-
       - name: Convert YARRRML to RML
         uses: vemonet/yarrrml-parser@v1.1
         with:
-          input: ./rules/mappings.yarrr.yml
+          input: ${{ github.workspace }}/rules/mappings.yarrr.yml
           output: mappings.rml.ttl
 
       - name: Run RML mapper
