--- a/rules/mappings.yarrr.yml
+++ b/rules/mappings.yarrr.yml
@@ -3,6 +3,8 @@ prefixes:
   e: http://myontology.com/
   dbo: http://dbpedia.org/ontology/
   grel: http://users.ugent.be/~bjdmeest/function/grel.ttl#
+  skos: http://www.w3.org/2004/02/skos/core#
+  schema: http://schema.org/ 
 
 mappings:
   people:
@@ -10,6 +12,8 @@ mappings:
       - ['data/people.csv~csv']
     s: ex:$(id)
     po:
+      - [a, skos:Concept]
+      - [skos:prefLabel, "$(firstname) $(lastname)"]
       - [a, schema:Person]
       - [schema:givenName, $(firstname)]
       - [schema:familyName, $(lastname)]
