--- a/.github/workflows/csv2skos.yml
+++ b/.github/workflows/csv2skos.yml
@@ -31,7 +31,7 @@ jobs:
           cache: 'pip'
 
       - name: Install pip dependencies
-        run: pip install -r ./requirements.txt
+        run: pip install skosify
 
       - name: Convert YARRRML to RML
         uses: vemonet/yarrrml-parser@v1.1
