--- a/.github/workflows/csv2skos.yml
+++ b/.github/workflows/csv2skos.yml
@@ -15,6 +15,10 @@ on:
       namespace:
         required: true
         type: string
+      mappings_file:
+        required: true
+        type: string
+      
     secrets:
         token:
           required: true
@@ -27,8 +31,9 @@ jobs:
         uses: styfle/cancel-workflow-action@0.6.0
         with:
           access_token: ${{ github.token }}
+      
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
           token: ${{ secrets.token }}
@@ -45,7 +50,7 @@ jobs:
       - name: Convert YARRRML to RML
         uses: vemonet/yarrrml-parser@v1.1
         with:
-          input: ./rules/mappings.yarrr.yml
+          input: ${{ inputs.mappings_file }}
           output: mappings.rml.ttl
           
       - name: Run RML mapper
