--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
             ref: ${{ github.ref }}
             namespace: http://www.example.com/
             namespace_label: example
+            mappings_file: rules/mappings.yarrr.yml
         secrets:
             token: ${{ secrets.GITHUB_TOKEN }}
 
